src/objects/TR1__Search_History__c.object
<CustomObject>
    <fields>
        <fullName>TR1__All_these_words__c</fullName>
        <label>All Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Backgrounds__c</fullName>
        <label>Backgrounds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Candiate_Status__c</fullName>
        <label>Candiate Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Ids__c</fullName>
        <label>Contact Ids</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Owner_Alias__c</fullName>
        <label>Contact Owner Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Discipline__c</fullName>
        <label>Discipline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Experience_Level__c</fullName>
        <label>Experience Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Function__c</fullName>
        <label>Function</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Hourly_Range__c</fullName>
        <label>Hourly Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Industry_Experience__c</fullName>
        <label>Industry Experience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__None_Keywords__c</fullName>
        <label>None Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Regional_Area__c</fullName>
        <label>Regional Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Salary_Range__c</fullName>
        <label>Salary Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Search_Name__c</fullName>
        <label>Search Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Some_Keywords__c</fullName>
        <label>Some Keywords</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__State_Area__c</fullName>
        <label>State Area</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__System_Experience__c</fullName>
        <label>System Experience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Zip_keywords__c</fullName>
        <label>Zip keywords</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Search History (Deprecated)</label>
    <nameField>
        <displayFormat>SHN-{0000}</displayFormat>
        <label>Search History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>